ej färdig change password

--- a/Mission.WebUI/Views/Home/ChangePassword.cshtml
+++ b/Mission.WebUI/Views/Home/ChangePassword.cshtml
@@ -1,20 +1,37 @@
 ﻿@{
     ViewBag.Title = "Byta lösenord";
 }
-
-    @model Mission.WebUI.ViewModels.ChangePassword
-@using (Html.BeginForm("ChangePassword", "Home"))
-{
-    
-    <div id="contactForm">
-        <fieldset>
-            @Html.TextBoxFor(m => m.Username, new { placeholder = "Användarnamn" })
-            @Html.PasswordFor(m => m.OldPassword, new { placeholder = "Gammalt lösenord" })
-            @Html.PasswordFor(m => m.NewPassword, new { placeholder = "Nytt lösenord" })
+@model Mission.WebUI.ViewModels.ChangePassword
+<div class="leftcol">
+    <h3 id="" class="home-block-heading">
+        <span>Byta eget lösenord </span>
+    </h3>
+    <div class="whiteboxes">
+        @using (Html.BeginForm())
+        {   <p>
+            Gammalt lösenord<br />
+            @Html.PasswordFor(m => m.OldPassword, new { placeholder = "Gammalt lösenord" })<br />
+            Nytt lösenord<br />
+            @Html.PasswordFor(m => m.NewPassword, new { placeholder = "Nytt lösenord" })<br />
+            Bekräfta nytt lösenord<br />
+            <input type="password" /><br />
+        </p>
             <p>
                 <input type="submit" id="submit" value="Byt lösenord" />
             </p>
-        </fieldset>
-    </div>
     
-}
+        }
+    </div>
+</div>
+<div class="rightcol">
+    <h3 id="" class="home-block-heading">
+        <span>Byta annan användares lösenord </span>
+    </h3>
+    <div class="whiteboxes">
+        Vilken användare ska byta lösen<br />
+        @Html.EditorFor(m => m.ChangeUserPwd.OtherUser)<br />
+        Nytt lösenord<br />
+        @Html.EditorFor(m => m.ChangeUserPwd.NewPassword)
+
+    </div>
+</div>
