--- a/Mission.WebUI/Views/Shared/_LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/_LogOn.cshtml
@@ -6,8 +6,7 @@
 @if (Request.IsAuthenticated)
 {
     <text><h3>Välkommen <strong style="text-transform:capitalize">@User.Identity.Name.ToLower()</strong>!</h3>
-    @Html.ActionLink("Logga ut", "LogOff", "Account", new { @class="submit-style logoff" })</text>
-
+    @Html.ActionLink("Logga ut", "LogOff", "Account")</text>
 }
 else
 {   
