--- a/Mission.WebUI/Views/Shared/DisplayTemplates/Comment.cshtml
+++ b/Mission.WebUI/Views/Shared/DisplayTemplates/Comment.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Mission.Domain.Entities
 @model Comment
+@using PagedList
+@using PagedList.Mvc
 <ol class="commentlist">
     <li class="comment even thread-even depth-1">
         <div class="comment-body clearfix">
