--- a/Mission.WebUI/Views/Event/CreateEvent.cshtml
+++ b/Mission.WebUI/Views/Event/CreateEvent.cshtml
@@ -10,9 +10,21 @@
 <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
+<link type="text/css" href="css/jquery.ui.theme.css" rel="stylesheet" />
+<link type="text/css" href="css/jquery.ui.datepicker.css" rel="stylesheet" />
+<link type="text/css" href="css/demos.css" rel="stylesheet" />
+<script type="text/javascript" src="js/jquery-1.7.1.js"></script>
+<script type="text/javascript" src="js/jquery.ui.core.js"></script>
+<script type="text/javascript" src="js/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="js/jquery.ui.datepicker.js"></script>
+
+
+
+<script type="text/javascript" src="@Url.Content("~/Content/js/DateTimePicker.js")"></script> 
+
 <div id="posts-list">
     <h2 class="page-heading">
-        <span>SKAPA EVENT</span></h2>
+        <span>Skapa nytt event</span></h2>
     @using (Html.BeginForm())
     { 
     
@@ -38,7 +50,7 @@
                 @Html.EditorFor(e => e.Event.City)<span style="color: Red;">@Html.ValidationMessageFor(s => s.Event.City)</span><br />
                 <div id="to-d">
                     Datum<br />
-                    @Html.TextBoxFor(e => e.Event.Date, new { id = "datepicker", value = "", style = "width:200px;", @class = "" })
+                    @Html.TextBoxFor(e => e.Event.Date, new { id = "datetimepicker", value = "", style = "width:200px;", @class = "" })
                     <br />
                     <span style="color: Red;">@Html.ValidationMessageFor(s => s.Event.Date)</span>
                 </div>
@@ -49,7 +61,7 @@
                 @Html.EditorFor(e => e.Username)<span style="color: Red;">@Html.ValidationMessageFor(s => s.Username)</span>
             </p>
             <p id="Password">
-                Detta blir lösenordet som företaget loggar in med <b />
+                Lösenord (Detta blir lösenordet som företaget loggar in med) <b />
                 @Html.EditorFor(e => e.Password)<br />
                 Epost<br />
                 @Html.EditorFor(e => e.Email)
@@ -64,8 +76,12 @@
     }
 </div>
 <script src="@Url.Content("~/Content/js/togglePassword.js")"></script>
-<script>
+<script type="text/javascript">
+
+
     $(function () {
-        $("#datepicker").datepicker();
-    });
-    </script>
+        $("#datetimepicker").datetimepicker();
+    }); 
+
+
+</script>
